# fee-market-simulator

./: .gitignore  Cargo.toml  README.md
examples/: floating_price.rs  generate_demand_profiles.rs  generate_demand_profiles.sh  price_adjustment1.toml
examples/autoprice/: README.md  demand_curve.csv
examples/autoprice/long-term-trend/: README.md  config.toml  generate_demand_profile.rs
examples/autoprice/short-term-daily-cycle/: README.md  config.toml  generate_demand_profile.rs
examples/autoprice/volatile-token-price/: README.md
examples/data/: ethusd_hourly.csv  scrape_training_data.py
src/: block.rs  demand.rs  helper.rs  lib.rs  simulator.rs  sorted_list.rs  transaction.rs
