[package]
name = "fee_market_simulator"
version = "0.1.0"
authors = ["Onur Solmaz <onursolmaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is_sorted = "0.1.1"
itertools = "0.9.0"
itertools-num = "0.1.3"
ordered-float = "1.0.2"
rand = "0.7.3"
streaming-stats = "0.2.3"
indicatif = "0.15.0"
